# legatus

./: .env.example  .gitignore  Makefile  README.md  agent-team-architecture.md  docker-compose.yaml  pyproject.toml
.agent-team/: config.yaml
config/: default.yaml
containers/agent/: Dockerfile  entrypoint.sh  requirements.txt
containers/mem0/: Dockerfile  config.yaml  main.py
containers/orchestrator/: Dockerfile
src/legatus/agent/: entrypoint.py  executor.py  memory_bridge.py  reporter.py
src/legatus/cli/: app.py  display.py  ws_client.py
src/legatus/cli/commands/: approve.py  cost.py  history.py  init.py  logs.py  memory.py  pause.py  start.py  status.py
src/legatus/memory/: __init__.py  client.py  namespaces.py
src/legatus/models/: __init__.py  agent.py  checkpoint.py  config.py  messages.py  task.py
src/legatus/orchestrator/: app.py  dependencies.py  ws.py
src/legatus/orchestrator/routers/: agents.py  checkpoints.py  costs.py  logs.py  memory.py  system.py  tasks.py
src/legatus/orchestrator/services/: agent_spawner.py  architect_parser.py  checkpoint_manager.py  docs_parser.py  event_bus.py  git_ops.py  pm_acceptance_parser.py  pm_parser.py  qa_parser.py  reviewer_parser.py  task_dispatcher.py  task_manager.py
src/legatus/redis_client/: __init__.py  client.py  cost_store.py  pubsub.py  state.py  task_store.py
